--- a/171224/c02.html
+++ b/171224/c02.html
@@ -15,15 +15,28 @@
             var stage = new createjs.Stage('stage');
 
             //画像の登録
-            var mainfest = [{src:'img/calcium.png'}];
+            var manifest = [
+                {src:'img/tomato.png'},
+                {src:'img/calcium.png'}];
 
             var loadQueue = new createjs.LoadQueue();
 
-            loadQueue.loadMainfest(mainfest);
+            loadQueue.loadManifest(manifest);
 
             loadQueue.addEventListener('complete',function(){
                 console.log('読み込み完了');
+                addstage();
             });
+
+            function addstage(){
+                var tomato = new createjs.Bitmap(manifest[0].src);
+                stage.addChild(tomato);
+                tomato.x=100;
+                tomato.y=100;
+                tomato.alpha=0;
+                createjs.Tween.get(tomato).wait(500).to({alpha:1},1000);
+
+            }
 
 
 
