--- a/171224/c02.html
+++ b/171224/c02.html
@@ -25,16 +25,36 @@
 
             loadQueue.addEventListener('complete',function(){
                 console.log('読み込み完了');
-                addstage();
+                addStage();
             });
 
             function addstage(){
+                //Bitmap
                 var tomato = new createjs.Bitmap(manifest[0].src);
                 stage.addChild(tomato);
                 tomato.x=100;
                 tomato.y=100;
                 tomato.alpha=0;
                 createjs.Tween.get(tomato).wait(500).to({alpha:1},1000);
+
+                //Sprite
+                var calciumSpriteSheet = new createjs.SpriteSheet(calciumSprite);
+                var calcium = new createjs.Sprite(calciumSpriteSheet,'stand');
+                stage.addChild(calcium);
+                calcium.x = 100;
+                calcium.y = 300;
+                calcium.alpha = 0;
+                createjs.Tween.get(calcium).wait(1000).to({alpha:1},1000);
+
+                calcium.addEventListener('click',function(){
+                    createjs.Tween.get(calcium).call(calciumWalk).to({x:400},2000);
+                })
+
+                function calciumWalk(){
+                    calcium.gotoAndPlay('walk');
+                }
+
+
 
             }
 
