--- a/171224/c02.html
+++ b/171224/c02.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>Canvas</title>
+   <meta charset="UTF-8">
+   <title>Canvas</title>
 </head>
 <body>
-    <canvas id="stage" width="500" height="500"></canvas>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-    <script>
-        // DOMの読み込み
-        $(function(){
-            // canvasの取得
-            var stage = new createjs.Stage('stage');
+   <canvas id="stage" width="600" height="500"></canvas>
+   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+   <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+   <script src="sprite.js"></script>
+   <script>
+       // DOMの読み込み
+       $(function(){
+           // canvasの取得
+           var stage = new createjs.Stage('stage');
 
-            //画像の登録
-            var manifest = [
-                {src:'img/tomato.png'},
-                {src:'img/calcium.png'}];
+           // 画像の登録
+           var manifest = [
+               {src:'img/tomato.png'},
+               {src:'img/calcium.png'}
+           ];
+           // loadQueue プリロード
+           var loadQueue = new createjs.LoadQueue();
+           // ファイルの指定　読み込み開始
+           loadQueue.loadManifest(manifest);
+           // 画像を全部読み込み終わったら
+           loadQueue.addEventListener('complete',function(){
+               console.log('読み込み完了');
+               addStage();
+           });
 
-            var loadQueue = new createjs.LoadQueue();
+           // ステージに配置
+           function addStage(){
+               // Bitmap
+               var tomato = new createjs.Bitmap(manifest[0].src);
+               stage.addChild(tomato);
+               tomato.x = 100;
+               tomato.y = 100;
+               tomato.alpha = 0;
+               createjs.Tween.get(tomato).wait(500).to({alpha:1},1000);
 
-            loadQueue.loadManifest(manifest);
+               // sprite
+               var calciumSpriteSheet = new createjs.SpriteSheet(calciumSprite);
+               var calcium = new createjs.Sprite(calciumSpriteSheet,'stand');
+               stage.addChild(calcium);
+               calcium.x = 0;
+               calcium.y = 300;
+               calcium.alpha = 0;
+               createjs.Tween.get(calcium).wait(1000).to({alpha:1},1000);
+               // クリックしたら
+               calcium.addEventListener('click',function(){
+                   createjs.Tween.get(calcium).call(calciumWalk).to({x:400},2000).call(calciumStop);
+               })
 
-            loadQueue.addEventListener('complete',function(){
-                console.log('読み込み完了');
-                addStage();
-            });
+               function calciumWalk(){
+                   calcium.gotoAndPlay('walk');
+               }
+               function calciumStop(){
+                   calcium.gotoAndPlay('stop');
+               }
 
-            function addstage(){
-                //Bitmap
-                var tomato = new createjs.Bitmap(manifest[0].src);
-                stage.addChild(tomato);
-                tomato.x=100;
-                tomato.y=100;
-                tomato.alpha=0;
-                createjs.Tween.get(tomato).wait(500).to({alpha:1},1000);
-
-                //Sprite
-                var calciumSpriteSheet = new createjs.SpriteSheet(calciumSprite);
-                var calcium = new createjs.Sprite(calciumSpriteSheet,'stand');
-                stage.addChild(calcium);
-                calcium.x = 100;
-                calcium.y = 300;
-                calcium.alpha = 0;
-                createjs.Tween.get(calcium).wait(1000).to({alpha:1},1000);
-
-                calcium.addEventListener('click',function(){
-                    createjs.Tween.get(calcium).call(calciumWalk).to({x:400},2000);
-                })
-
-                function calciumWalk(){
-                    calcium.gotoAndPlay('walk');
-                }
-
-
-
-            }
-
-
-
-
-
-
-            createjs.Ticker.addEventListener('tick',tick);
-            // requestAnimationFrameの実行
-            createjs.Ticker.timingMode = createjs.Ticker.RAF_SYNCHED;
-
-            function tick(){
-                stage.update(); //描画の更新
-            }
+           }
 
 
-        });
-    </script>
+
+           createjs.Ticker.addEventListener('tick',tick);
+           // requestAnimationFrameの実行
+           createjs.Ticker.timingMode = createjs.Ticker.RAF_SYNCHED;
+
+           function tick(){
+               stage.update(); //描画の更新
+           }
+
+
+       });
+   </script>
 </body>
 </html>
-Add Comment Collapse
